--- a/app/src/main/res/layout/activity_data_diri.xml
+++ b/app/src/main/res/layout/activity_data_diri.xml
@@ -188,6 +188,7 @@
                     android:id="@+id/spinnerDokumen"
                     android:layout_width="match_parent"
                     android:layout_height="48dp"
+                    android:paddingEnd="10dp"
                     android:background="@drawable/transparent_bg_button"
                     android:layout_weight="1"/>
 
@@ -196,6 +197,7 @@
                     android:layout_height="20dp"
                     android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                     android:layout_gravity="center"
+                    android:paddingStart="10dp"
                     android:background="@drawable/transparent_bg_button"/>
             </LinearLayout>
 
@@ -439,7 +441,7 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintTop_toTopOf="parent" />
-                
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
             <TextView
@@ -561,6 +563,55 @@
             </RadioGroup>
 
             <TextView
+                android:id="@+id/tvPhone"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Phone Number"
+                android:fontFamily="@font/dm_sans_medium"
+                android:textSize="16sp"
+                android:textColor="@color/warna_auth_font"
+                android:layout_marginVertical="20dp"
+                android:layout_marginStart="24dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rgJenisKelamin"/>
+
+            <TextView
+                android:id="@+id/tvStarPhonNumber"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="*"
+                android:textColor="@color/warning_font"
+                android:fontFamily="@font/dm_sans_medium"
+                android:textSize="16sp"
+                android:layout_marginVertical="18dp"
+                android:layout_marginStart="5dp"
+                app:layout_constraintStart_toEndOf="@+id/tvPhone"
+                app:layout_constraintTop_toBottomOf="@+id/rgJenisKelamin"/>
+
+            <LinearLayout
+                android:id="@+id/llphone"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginHorizontal="24dp"
+                android:orientation="horizontal"
+                app:layout_constraintTop_toBottomOf="@id/tvPhone"
+                android:background="@drawable/transparent_bg_button">
+
+                <EditText
+                    android:id="@+id/etPhone"
+                    android:layout_width="match_parent"
+                    android:layout_height="50dp"
+                    android:hint="Nomor Handphone"
+                    android:layout_weight="1"
+                    android:maxLength="16"
+                    android:digits="abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789@#*&amp;"
+                    android:textColorHint="@color/warna_grey_font"
+                    android:textColor="@color/warna_auth_font"
+                    android:background="@drawable/transparent_bg_button"/>
+            </LinearLayout>
+
+            <TextView
                 android:id="@+id/tvPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -571,7 +622,7 @@
                 android:layout_marginVertical="20dp"
                 android:layout_marginStart="24dp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/rgJenisKelamin"/>
+                app:layout_constraintTop_toBottomOf="@+id/llphone"/>
 
             <TextView
                 android:id="@+id/tvStarPassword"
@@ -584,7 +635,7 @@
                 android:layout_marginVertical="18dp"
                 android:layout_marginStart="5dp"
                 app:layout_constraintStart_toEndOf="@+id/tvPassword"
-                app:layout_constraintTop_toBottomOf="@+id/rgJenisKelamin"/>
+                app:layout_constraintTop_toBottomOf="@+id/llphone"/>
 
             <LinearLayout
                 android:id="@+id/llKatasandi"
@@ -730,8 +781,10 @@
                 android:id="@+id/btnLanjut"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                style="@style/invisiblebutton"
+                style="@style/Button"
                 android:text="Lanjut"
+                android:textColor="@color/white"
+                android:textAllCaps="false"
                 android:fontFamily="@font/dm_sans_medium"
                 android:paddingVertical="10dp"
                 android:layout_marginStart="24dp"
@@ -740,115 +793,24 @@
                 app:layout_constraintTop_toBottomOf="@+id/rgSyaratdanKetentuan"
                 app:layout_constraintEnd_toEndOf="@+id/constrainDataDiri"
                 app:layout_constraintStart_toStartOf="@+id/constrainDataDiri"
-                android:enabled="false"/>
+                />
+
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
     </ScrollView>
 
+    <ProgressBar
+        android:id="@+id/progressBar"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-<!--<androidx.constraintlayout.widget.ConstraintLayout-->
-<!--android:id="@+id/constrainPilihDokumen"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="50dp"-->
-<!--android:layout_marginStart="24dp"-->
-<!--android:layout_marginEnd="24dp"-->
-<!--android:layout_marginVertical="5dp"-->
-<!--android:background="@drawable/transparent_bg_button"-->
-<!--app:layout_constraintTop_toBottomOf="@+id/tvDokumen"-->
-<!--app:layout_constraintStart_toStartOf="parent"-->
-<!--app:layout_constraintEnd_toEndOf="parent">-->
-
-<!--<TextView-->
-<!--    android:id="@+id/etNegara"-->
-<!--    android:layout_width="wrap_content"-->
-<!--    android:layout_height="wrap_content"-->
-<!--    android:text="Pilih Negara"-->
-<!--    android:fontFamily="@font/dm_sans_medium"-->
-<!--    android:textSize="12sp"-->
-<!--    android:textColor="@color/warna_auth_font"-->
-<!--    android:layout_marginVertical="5dp"-->
-<!--    app:layout_constraintTop_toTopOf="@id/constrainPilihDokumen"-->
-<!--    app:layout_constraintStart_toStartOf="@id/constrainPilihDokumen"-->
-<!--    app:layout_constraintBottom_toBottomOf="@id/constrainPilihDokumen"-->
-<!--    android:layout_marginStart="10dp"/>-->
-
-<!--<ImageView-->
-<!--    android:layout_width="30dp"-->
-<!--    android:layout_height="30dp"-->
-<!--    android:layout_marginEnd="10dp"-->
-<!--    android:src="@drawable/ic_baseline_keyboard_arrow_down_24"-->
-<!--    app:layout_constraintTop_toTopOf="@id/constrainPilihDokumen"-->
-<!--    app:layout_constraintEnd_toEndOf="@id/constrainPilihDokumen"-->
-<!--    app:layout_constraintBottom_toBottomOf="@id/constrainPilihDokumen"/>-->
-
-<!--</androidx.constraintlayout.widget.ConstraintLayout>-->
-
-    <!--            <TextView-->
-    <!--                android:id="@+id/tvWargaNegara"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:text="Kewarganegaraan"-->
-    <!--                android:fontFamily="@font/dm_sans_medium"-->
-    <!--                android:textSize="16sp"-->
-    <!--                android:textColor="@color/warna_auth_font"-->
-    <!--                android:layout_marginVertical="20dp"-->
-    <!--                android:layout_marginStart="24dp"-->
-    <!--                app:layout_constraintStart_toStartOf="parent"-->
-    <!--                app:layout_constraintTop_toBottomOf="@+id/etEmail"/>-->
-
-
-
-    <!--            <RadioGroup-->
-    <!--                android:id="@+id/radiogroupWNI"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                app:layout_constraintStart_toStartOf="parent"-->
-    <!--                app:layout_constraintTop_toBottomOf="@+id/tvWargaNegara"-->
-    <!--                android:orientation="horizontal">-->
-
-    <!--                <RadioButton-->
-    <!--                    android:id="@+id/rbWni"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="WNI"-->
-    <!--                    android:fontFamily="@font/dm_sans"-->
-    <!--                    android:textColor="@color/warna_auth_font"-->
-    <!--                    android:layout_marginStart="24dp"/>-->
-
-    <!--                <RadioButton-->
-    <!--                    android:id="@+id/rbWna"-->
-    <!--                    android:layout_width="wrap_content"-->
-    <!--                    android:layout_height="wrap_content"-->
-    <!--                    android:text="WNA"-->
-    <!--                    android:fontFamily="@font/dm_sans"-->
-    <!--                    android:textColor="@color/warna_auth_font"-->
-    <!--                    android:layout_marginStart="24dp"/>-->
-    <!--            </RadioGroup>-->
-
-    <!--            <TextView-->
-    <!--                android:id="@+id/tvDokumen"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:text="Negara"-->
-    <!--                android:fontFamily="@font/dm_sans_medium"-->
-    <!--                android:textSize="16sp"-->
-    <!--                android:textColor="@color/warna_auth_font"-->
-    <!--                android:layout_marginVertical="5dp"-->
-    <!--                android:layout_marginStart="24dp"-->
-    <!--                app:layout_constraintStart_toStartOf="parent"-->
-    <!--                app:layout_constraintTop_toBottomOf="@+id/radiogroupWNI"/>-->
-
-    <!--            <TextView-->
-    <!--                android:id="@+id/tvStarDokumen"-->
-    <!--                android:layout_width="wrap_content"-->
-    <!--                android:layout_height="wrap_content"-->
-    <!--                android:text="*"-->
-    <!--                android:textColor="@color/warning_font"-->
-    <!--                android:fontFamily="@font/dm_sans_medium"-->
-    <!--                android:textSize="16sp"-->
-    <!--                android:layout_marginVertical="5dp"-->
-    <!--                android:layout_marginStart="5dp"-->
-    <!--                app:layout_constraintStart_toEndOf="@+id/tvDokumen"-->
-    <!--                app:layout_constraintTop_toBottomOf="@+id/radiogroupWNI"/>-->
