--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -3,12 +3,12 @@
     <style name="Theme.CrossCurrencyTransfer" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Primary brand color. -->
         <item name="background">@color/warna_background</item>
-        <item name="colorPrimary">@color/warna_background</item>
-        <item name="colorPrimaryVariant">@color/white</item>
-        <item name="colorOnPrimary">@color/black</item>
+        <item name="colorPrimary">@color/warna_primary_font</item>
+        <item name="colorPrimaryVariant">@color/warna_second_button</item>
+        <item name="colorOnPrimary">@color/warna_primary_font</item>
         <!-- Secondary brand color. -->
         <item name="colorSecondary">@color/warna_button</item>
-        <item name="colorSecondaryVariant">@color/warna_background</item>
+        <item name="colorSecondaryVariant">@color/teal_700</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l" tools:ignore="ObsoleteSdkInt">?attr/colorPrimaryVariant</item>
